<resources>
    <string name="app_name">Implicit_Intent</string>
    <string name="android_logo">android_logo</string>
    <string name="logo">android_logo</string>
    <string name="share_text">SHARE TEXT</string>
    <string name="https_developer_android_com">https://developer.android.com</string>
    <string name="open_website">OPEN WEBSITE</string>
    <string name="open_location">OPEN LOCATION</string>
    <string name="isims">ISIMS</string>
    <string name="mobile_programming_example">Mobile programming Example</string>
    <string name="mobile_programming_exampl">Mobile programming Example</string>
</resources>